@@ -3,6 +3,7 @@ package com.example.registrationsystem.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
@@ -11,15 +12,15 @@ import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
-import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 @Configuration
-@EnableSwagger2
+@Component
 @EnableWebMvc
-public class SwaggerConfiguration {
+public class SwaggerConfig {
 
     @Bean
     public Docket api(){
@@ -27,9 +28,9 @@ public class SwaggerConfiguration {
                 .securityContexts(Collections.singletonList(getContext()))
                 .securitySchemes(Collections.singletonList(apiKey()))
                 .select()
-                .apis(RequestHandlerSelectors.basePackage("uz.group"))
+                .apis(RequestHandlerSelectors.basePackage("uz.group.app"))
                 .paths(PathSelectors.any())
-                .build().apiInfo(metadata());
+                .build().apiInfo(apiInfo());
     }
 
     private ApiKey apiKey(){
@@ -37,7 +38,7 @@ public class SwaggerConfiguration {
     }
 
     private SecurityContext getContext() {
-       return SecurityContext.builder().securityReferences(defaultAuth()).build();
+        return SecurityContext.builder().securityReferences(defaultAuth()).build();
     }
 
 
@@ -45,16 +46,16 @@ public class SwaggerConfiguration {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return List.of(new SecurityReference("JWT", authorizationScopes));
+        return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
     }
 
-    private ApiInfo metadata() {
-        return new ApiInfoBuilder().title("API Endpoints for Registration")
+    private ApiInfo apiInfo() {
+        return new ApiInfoBuilder().title("API Endpoints for Registration Web App")
                 .description("This project is a real estate e-commerce website")
                 .license("Apache version 2.0")
                 .version("1.1.0")
                 .licenseUrl("https://www.apache.org/licenses/LICENSE-2.0.html")
-                .contact(new Contact("group", "www.group.uz", "azizovmuhammaduz@gmail.com"))
+                .contact(new Contact("Digital One", "www.group.uz", "gm.azizovmuhammaduz@gmail.com.com"))
                 .build();
     }
 }
